2005-10-25  David Vrabel <dvrabel@arcom.com>

	* src/if_dm9000.c (eeprom_read, eeprom_write, eeprom_reload):
	Delay more when writing/reading eeprom (200 us isn't enough).
	(phy_init): Turn on PHY before writing PHY registers.  Wait for
	auto negotiation to be complete.
	(dm9000_send): Correctly write last words to Tx SRAM when using a
	8/16 bit device.  Clarify and comment code.
	(dm9000_poll): Parse Rx packet header correctly on 8/16 bit
	devices.
	(dm9000_ioctl): Handle ETH_DRV_GET_MAC_ADDRESS and
	ETH_DRV_SET_MAC_ADDRESS.

	* cdl/davicom_dm9000_eth_drivers.cdl: New option
	CYGSEM_DEVS_ETH_DAVICOM_DM9000_WRITE_EEPROM to enable/disable
	writing to EEPROM.

2004-09-05  Mark Salter <msalter@redhat.com>

	Initial Checkin of DM9000 Ethernet driver (RedBoot only for now).

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not